# myshift

./: .buildinfo  .gitignore  CONTRIBUTING.md  Containerfile  README.md  TODO.md  api.html  configuration.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  pr-preflight.sh  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.github/workflows/: container-build.yml  docs.yml  pr-checks.yml
_modules/: index.html
_modules/myshift/: config.html  next.html  plan.html  repl.html  util.html
_sources/: configuration.rst.txt  contributing.rst.txt  installation.rst.txt
_static/: opensearch.xml
docs/: Makefile  api.rst  conf.py  configuration.rst  installation.rst
docs/_build/doctrees/: api.doctree  configuration.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/html/: api.html  configuration.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/myshift/: __main__.html  config.html  override.html  upcoming.html
docs/_build/html/_sources/: index.rst.txt  usage.rst.txt
git-hooks/: commit-msg
myshift/: __init__.py  __main__.py  config.py  constants.py  exceptions.py  models.py  next.py  override.py  plan.py  repl.py  upcoming.py  user.py  util.py
