[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myshift"
version = "0.1.0"
authors = [
  { name="John Casey", email="john.casey@example.com" },
]
description = "A tool for managing on-call shifts in PagerDuty"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pagerduty",
    "python-dateutil",
]

[project.scripts]
myshift = "myshift.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["myshift"] 